--- a/app/views/public/customers/show.html.haml
+++ b/app/views/public/customers/show.html.haml
@@ -38,6 +38,7 @@
             %p.card-text
             - if @customer.id == current_customer.id
               = link_to 'プロフィール編集', edit_public_customer_path(@customer), data: { 'turbolinks': false }, class: "btn btn-info customer-show-btn"
+              = link_to 'パスワード変更', mypage_edit_password_public_customer_path(@customer), data: { 'turbolinks': false }, class: "btn btn-success customer-show-btn"
             - else
               - if current_customer.following?(@customer)
                 = link_to "フォロー外す", public_customer_relationships_path(@customer.id), data: { 'turbolinks': false }, method: :delete, class: "btn btn-info customer-show-btn"
