--- a/app/views/public/mailer/confirmation_instructions.html.haml
+++ b/app/views/public/mailer/confirmation_instructions.html.haml
@@ -3,7 +3,7 @@
   ご登録のメールアドレス: #{@email}
 
 %p 以下の【メールアドレス確認】を押してユーザー登録を完了してください🎸
-%p= link_to 'メールアドレス確認', confirmation_url(@resource, confirmation_token: @token)
+%p= link_to 'メールアドレス確認', confirmation_url(@resource, confirmation_token: @token), method: :post
 %p ※心当たりがない場合は、本メッセージは破棄してください。
 
 %p Thank you for Using BeMyStyle🎵
