fix/sign-up-part-express

--- a/app/views/public/registrations/new.html.haml
+++ b/app/views/public/registrations/new.html.haml
@@ -57,6 +57,7 @@
                   = tag.check_box
                   = tag.text
               %i.text-red.block ※パートの入力(チェック)必須
+              %i※初心者でもOK!やってみたいパートでもOKです！
           %tr
             %th{scope:"row"} 活動場所
             %td 
