--- a/app/views/layouts/_header_menu.html.haml
+++ b/app/views/layouts/_header_menu.html.haml
@@ -37,6 +37,8 @@
         %li
           = link_to "Topページ", public_homes_top_path, data: { 'turbolinks': false }, class: "btn btn-info menu-sp-btn"
         %li
+          = link_to "BeMyStyleとは？", public_homes_about_path, data: { 'turbolinks': false }, class: "btn btn-info menu-sp-btn"
+        %li
           = link_to "コミュニティ一覧", public_communities_path, data: { 'turbolinks': false }, class: "btn btn-info menu-sp-btn"
         %li
           - if current_customer.present?
@@ -57,19 +59,31 @@
         %li
           %i.fa-solid.fa-right-to-bracket
           = link_to "ログイン", new_customer_session_path, data: { 'turbolinks': false }, class: "btn btn-primary menu-sp-btn"
+        %li
+          = link_to "Topページ", public_homes_top_path, data: { 'turbolinks': false }, class: "btn btn-info menu-sp-btn"
+        %li
+          = link_to "BeMyStyleとは？", public_homes_about_path, data: { 'turbolinks': false }, class: "btn btn-info menu-sp-btn"
 
   .customer-menu-pc
     %ul.list-style-none.list
-      %li
-        = link_to "Topページ", public_homes_top_path, data: { 'turbolinks': false }, class: "btn btn-info flex-item"
-      %li
-        = link_to "コミュニティ一覧", public_communities_path, data: { 'turbolinks': false }, class: "btn btn-info flex-item"
-      %li
-        - if current_customer.present?
-          = link_to "マイページ", public_customer_path(current_customer), data: { 'turbolinks': false }, class: "btn btn-info flex-item"
-      %li
-        = link_to "個別チャット", public_matchings_path, data: { 'turbolinks': false }, class: "btn btn-info flex-item"
-      %li
-        = link_to "みんなの活動報告", public_activities_path, data: { 'turbolinks': false }, class: "btn btn-info flex-item"
-      %li
-        = link_to "イベント参加", public_events_path, data: { 'turbolinks': false }, class: "btn btn-info flex-item"
+      - if customer_signed_in?
+        %li
+          = link_to "Topページ", public_homes_top_path, data: { 'turbolinks': false }, class: "btn btn-info menu-sp-btn"
+        %li
+          = link_to "BeMyStyleとは？", public_homes_about_path, data: { 'turbolinks': false }, class: "btn btn-info menu-sp-btn"
+        %li
+          = link_to "コミュニティ一覧", public_communities_path, data: { 'turbolinks': false }, class: "btn btn-info menu-sp-btn"
+        %li
+          - if current_customer.present?
+            = link_to "マイページ", public_customer_path(current_customer), data: { 'turbolinks': false }, class: "btn btn-info menu-sp-btn"
+        %li
+          = link_to "個別チャット", public_matchings_path, data: { 'turbolinks': false }, class: "btn btn-info menu-sp-btn"
+        %li
+          = link_to "みんなの活動報告", public_activities_path, data: { 'turbolinks': false }, class: "btn btn-info menu-sp-btn"
+        %li
+          = link_to "イベント参加", public_events_path, data: { 'turbolinks': false }, class: "btn btn-info menu-sp-btn"
+      - else
+        %li
+          = link_to "Topページ", public_homes_top_path, data: { 'turbolinks': false }, class: "btn btn-info menu-sp-btn"
+        %li
+          = link_to "BeMyStyleとは？", public_homes_about_path, data: { 'turbolinks': false }, class: "btn btn-info menu-sp-btn"
