--- a/app/assets/stylesheets/public/homes/about.scss
+++ b/app/assets/stylesheets/public/homes/about.scss
@@ -7,7 +7,7 @@
 
 .about-lead{
   margin: 0 auto;
-  font-size: 20px;
+  font-size: 17px;
   border: solid 5px #17a2b8;
   border-radius: 10px;
   width: fit-content;
@@ -19,7 +19,8 @@
 .about-to-do{
   text-align: center;
   margin: 20px auto;
-  font-size: 20px;
+  padding-top: 20px;
+  font-size: 17px;
   border: solid 5px #17a2b8;
   border-radius: 10px;
   width: 90%;
@@ -38,7 +39,8 @@
 .about-community{
   text-align: center;
   margin: 20px auto;
-  font-size: 20px;
+  padding-top: 25px;
+  font-size: 17px;
   border: solid 5px #17a2b8;
   border-radius: 10px;
   width: 90%;
@@ -57,7 +59,8 @@
 .about-activity{
   text-align: center;
   margin: 20px auto;
-  font-size: 20px;
+  padding-top: 25px;
+  font-size: 17px;
   border: solid 5px #17a2b8;
   border-radius: 10px;
   width: 90%;
@@ -76,7 +79,8 @@
 .about-event{
   text-align: center;
   margin: 20px auto;
-  font-size: 20px;
+  padding-top: 25px;
+  font-size: 17px;
   border: solid 5px #17a2b8;
   border-radius: 10px;
   width: 90%;
