--- a/app/views/public/homes/about.html.haml
+++ b/app/views/public/homes/about.html.haml
@@ -14,15 +14,15 @@
       = image_tag asset_path("relax-kuma"), size:"200x200"
     
   .about-to-do
-    %h4 📝まずはコレをやってみよう📝
-    %h4 〜３つのオススメBeMyStyleの歩き方〜
+    %h5 📝まずはコレをやってみよう📝
+    %h6 〜３つのオススメBeMyStyleの歩き方〜
     %ul.list-style-none.about-to-do-list
       %li ①「コミュニティ」に参加しよう
       %li ②「みんなの活動報告」に投稿しよう
       %li ③「イベント」に参加しよう
 
   .about-community
-    %h4  ①気になる「コミュニティ」に参加申請しよう
+    %h5  ①気になる「コミュニティ」に参加申請しよう
     .row
       .col-md-8
         %ul.list-style-none.about-community-list
@@ -36,7 +36,7 @@
         = image_tag asset_path("letter-form-girl"), size:"250x200"
 
   .about-activity
-    %h4  ②近況を「みんなの活動報告」で投稿しよう
+    %h5  ②近況を「みんなの活動報告」で投稿しよう
     .row
       .col-md-4
         = image_tag asset_path("acguitar-girl"), size:"250x200"
@@ -50,11 +50,11 @@
             = link_to "活動報告", public_activities_path, data: { 'turbolinks': false }, class: "btn btn-info menu-sp-btn"
 
   .about-event
-    %h4  ③開催「イベント」に参加してみよう
+    %h5  ③開催「イベント」に参加してみよう
     .row
       .col-md-8
         %ul.list-style-none.about-event-list
-          %li 📝邦楽、洋楽、コピー、フリーなど様々🎵
+          %li 📝イベント参加は開催コミュニティ所属が前提です
           %li 📝「登録のパート」で曲毎に参加します
           %li 📝他の参加メンバーもチェックできます
           %li.about-direct-btn
