--- a/app/assets/stylesheets/public/events.scss
+++ b/app/assets/stylesheets/public/events.scss
@@ -211,7 +211,6 @@
   }
   .event-show-table{
     border: thick double lightblue;
-    margin-top: -25px;
     #map {
       height: 300px;
       width: 700px;
@@ -233,6 +232,13 @@
         margin-top: 5px;
         min-height: 70px;
         width: 90%;
+        .part-name{
+          border: solid 1px black;
+          border-radius: 10px;
+          margin-right: 5px;
+          line-height: 70px;
+          padding: 5px;
+        }
       }
       .image-style{
         text-decoration: none;
@@ -250,6 +256,21 @@
         border-radius: 5px;
         padding: 8px 5px 5px 5px ;
         height: 40px;
+      }
+    }
+    .join-part-list{
+      margin-top: 10px;
+      border: solid 1px black;
+      border-radius: 10px;
+      padding: 5px;
+      .join-part-song-name{
+        font-weight: bold;
+        font-size: 25px;
+        margin-bottom: 5px;
+      }
+      .join-part-btn{
+        margin: 0 0 20px 50px;
+        min-width: 100px;
       }
     }
     input[type="submit"] {
@@ -364,6 +385,17 @@
       object-fit: cover;
       border-radius: 10px;
       padding: 5px;
+    }
+    .song-layout{
+      border: solid 3px #17a2b8;
+      border-radius: 10px;
+      padding: 10px;
+      .join-part-layout{
+        border: solid 3px #17a2b8;
+        border-radius: 10px;
+        margin-left: 30px;
+        padding: 10px;
+      }
     }
   }
   .event-btn{
