--- a/app/views/public/events/_song_fields.html.haml
+++ b/app/views/public/events/_song_fields.html.haml
@@ -1,7 +1,14 @@
 .nested-fields
-  .field
-    = f.text_field :song_name, placeholder: "楽曲名"
-  .field
-    = f.text_field :youtube_url, placeholder: "Youtubeの動画URL"
-  .field
-    = link_to_remove_association '曲を削除', f, class: 'btn btn-danger js-song-remove-btn'
+  .song-layout
+    .field
+      = f.text_field :song_name, placeholder: "楽曲名"
+    .field
+      = f.text_field :youtube_url, placeholder: "Youtubeの動画URL"
+    .field
+      = link_to_remove_association '曲を削除', f, class: 'btn btn-danger js-song-remove-btn'
+    #join_parts.join-part-layout
+      = f.fields_for :join_parts, id: 'js-join-part-field' do |join_part|
+        .field
+          = render 'public/events/join_part_fields', f: join_part
+      .links{data: {count: @song.join_parts.count}}
+        = link_to_add_association 'パートを追加',f ,:join_parts ,{ class: 'btn btn-success js-add-join-part-field-btn' }
