--- a/app/views/public/events/show.html.haml
+++ b/app/views/public/events/show.html.haml
@@ -119,141 +119,52 @@
                     投稿された動画はありません。
                   %br
                   .join-member
-                    #{song.song_name} 🎤ボーカル🎤
-                    %br
-                    .member
-                      - song.customers.distinct.each do |customer|
-                        -if customer.parts.pluck(:name).include?("ボーカル")
+                    - song.join_parts.each do |join_part|
+                      .member
+                        .part-name
+                          = join_part.join_part_name
+                        - join_part.customers.each do |customer|
                           = link_to public_customer_path(customer), class: 'image-style', data: { 'turbolinks': false } do
                             .image_container
                               - if customer.profile_image.present?
                                 = image_tag customer.profile_image, class: "icon_mini"
                               - else
                                 = image_tag 'no_image', class: "icon_mini"
-                            = customer.name
-                          - @vocal << customer.id
+                              %br
+                              = customer.name
+                        %hr
+                        .part-join-member
+                          = join_part.customers.length
+                          人
                       %hr
-                      .part-join-member
-                        ボーカル#{@vocal.length}人
-                      - @vocal = []
-                    %hr
-                    #{song.song_name} 🎸ギター🎸
-                    %br
-                    .member
-                      - song.customers.distinct.each do |customer|
-                        - if customer.parts.pluck(:name).include?("ギター")
-                          = link_to public_customer_path(customer), class: 'image-style', data: { 'turbolinks': false } do
-                            .image_container
-                              - if customer.profile_image.present?
-                                = image_tag customer.profile_image, class: "icon_mini"
-                              - else
-                                = image_tag 'no_image', class: "icon_mini"
-                            = customer.name
-                          - @guitar << customer.id
-                      %hr
-                      .part-join-member
-                        ギター#{@guitar.length}人
-                      - @guitar = []
-                    %hr
-                    #{song.song_name} 🎸ベース🎸
-                    %br
-                    .member
-                      - song.customers.distinct.each do |customer|
-                        - if customer.parts.pluck(:name).include?("ベース")
-                          = link_to public_customer_path(customer), class: 'image-style', data: { 'turbolinks': false } do
-                            .image_container
-                              - if customer.profile_image.present?
-                                = image_tag customer.profile_image, class: "icon_mini"
-                              - else
-                                = image_tag 'no_image', class: "icon_mini"
-                            = customer.name
-                          - @bass << customer.id
-                      %hr
-                      .part-join-member
-                        ベース#{@bass.length}人
-                      - @bass = []
-                    %hr
-                    #{song.song_name} 🎹キーボード🎹
-                    %br
-                    .member
-                      - song.customers.distinct.each do |customer|
-                        - if customer.parts.pluck(:name).include?("ピアノ・キーボード")
-                          = link_to public_customer_path(customer), class: 'image-style', data: { 'turbolinks': false } do
-                            .image_container
-                              - if customer.profile_image.present?
-                                = image_tag customer.profile_image, class: "icon_mini"
-                              - else
-                                = image_tag 'no_image', class: "icon_mini"
-                            = customer.name
-                          - @keyboard << customer.id
-                      %hr
-                      .part-join-member
-                        キーボード#{@keyboard.length}人
-                      - @keyboard = []
-                    %hr
-                    #{song.song_name} 🥁ドラム🥁
-                    %br
-                    .member
-                      - song.customers.distinct.each do |customer|
-                        - if customer.parts.pluck(:name).include?("ドラム")
-                          = link_to public_customer_path(customer), class: 'image-style', data: { 'turbolinks': false } do
-                            .image_container
-                              - if customer.profile_image.present?
-                                = image_tag customer.profile_image, class: "icon_mini"
-                              - else
-                                = image_tag 'no_image', class: "icon_mini"
-                            = customer.name
-                          - @drums << customer.id
-                      %hr
-                      .part-join-member
-                        ドラム#{@drums.length}人
-                      - @drums = []
-                    %hr
-                    #{song.song_name} 🎷特別枠🎷
-                    %br
-                    .member
-                      - song.customers.distinct.each do |customer|
-                        - part = customer.parts.pluck(:name)
-                        - unless part.include?("ボーカル") || part.include?("ギター") || part.include?("ベース") || part.include?("ピアノ・キーボード")  || part.include?("ドラム")
-                          = link_to public_customer_path(customer), class: 'image-style', data: { 'turbolinks': false } do
-                            .image_container
-                              - if customer.profile_image.present?
-                                = image_tag customer.profile_image, class: "icon_mini"
-                              - else
-                                = image_tag 'no_image', class: "icon_mini"
-                            = customer.name
-                          - @others << customer.id
-                      %hr
-                      .part-join-member
-                        特別枠#{@others.length}人
-                      - @others = []
-                  %hr
-              %br
             %tr
               %th{scope:"row"} 参加フォーム
               %td
                 #event-songs
                   -if @event.event_end_time > Time.now
-                    📢参加したい曲にチェックを入れて「参加する」ボタンを押して下さい📢
+                    📢参加したい曲とパートを選んで「参加する」ボタンを押して下さい📢
                     %br
-                    📢参加ボタンを押すと、チェックを入れた楽曲にアイコンが表示されます📢
-                    %br
-                    📢参加パートはマイページで登録したパート（マルチプレイヤーは全て）で参加となります📢
+                    📢参加ボタンを押すと、楽曲のパート内にアイコンが表示されます📢
                     %br
                     .text-red
                       ※このイベントは【#{@community.name}】に参加している必要があります。
                     %hr
-                    = form_tag(public_event_join_path(@event), method: :get,  onSubmit: "return CheckJoin()") do
-                      = collection_check_boxes(:event, :song_ids, @event.songs, :id, :song_name, checked:false) do |event|
-                        = event.label do
-                          = event.check_box
-                          ◀️参加したい曲にチェック🎵
-                          .song-name
-                            = event.text
-                          %hr
-                        %br
-                        = hidden_field_tag :event_id, @event.id
-                      %input{type: "submit", value: "参加する", confirm: "こちらのイベントに参加をします。よろしいですか？", data: {'disable_with': '送信中...', 'turbolinks': false}}
+                    - @event.songs.each do |song|
+                      .join-part-list
+                        .join-part-song-name
+                          =song.song_name
+                        %hr
+                        = form_tag(public_event_join_path(@event), method: :post,  onSubmit: "return CheckJoin()") do
+                          = collection_check_boxes(:event, :join_part_ids, song.join_parts, :id, :join_part_name, checked:false) do |part|
+                            = part.label do
+                              .song-name
+                                = part.check_box
+                                = part.text
+                              ☝️参加したいパートにチェック🎵
+                              %hr
+                            %br
+                            = hidden_field_tag :event_id, @event.id
+                          %input{type: "submit", value: "参加する", class: "join-part-btn", confirm: "こちらのイベントに参加をします。よろしいですか？", data: {'disable_with': '送信中...', 'turbolinks': false}}
                   - else
                     こちらのイベントは終了致しました。
             %tr
