--- a/app/views/public/events/index.html.haml
+++ b/app/views/public/events/index.html.haml
@@ -42,10 +42,14 @@
             = event.place
             %hr
             %b 参加人数
-            - joined_member_ids = []
-            - event.songs.each do |song|
-              - joined_member_ids += song.customers.distinct.pluck(:id)
-            - joined_member_counts = joined_member_ids.uniq.length
+            :ruby
+              joined_member_ids = []
+              event.songs.each do |song|
+                song.join_parts.each do |join_part|
+                  joined_member_ids += join_part.customers.pluck(:id)
+                end
+              end
+              joined_member_counts = joined_member_ids.uniq.length
             #{joined_member_counts}人
           %hr
           .event-show-link-area
