--- a/app/assets/stylesheets/public/events.scss
+++ b/app/assets/stylesheets/public/events.scss
@@ -233,10 +233,13 @@
         min-height: 70px;
         width: 90%;
         .part-name{
+          text-align: center;
           border: solid 1px black;
           border-radius: 10px;
           margin-right: 5px;
-          line-height: 70px;
+          width: 130px;
+          height: 70px;
+          line-height: 60px;
           padding: 5px;
         }
       }
@@ -268,10 +271,10 @@
         font-size: 25px;
         margin-bottom: 5px;
       }
-      .join-part-btn{
-        margin: 0 0 20px 50px;
-        min-width: 100px;
-      }
+    }
+    .join-part-btn{
+      margin: 20px 0 20px 50px;
+      min-width: 100px;
     }
     input[type="submit"] {
       width: 20%;
