--- a/app/views/public/events/show.html.haml
+++ b/app/views/public/events/show.html.haml
@@ -141,7 +141,7 @@
               %td
                 #event-songs
                   -if @event.event_end_time > Time.now
-                    📢参加したい曲のパートを選んで下部の「参加する」ボタンを押して下さい📢
+                    📢参加したい曲のパート（全て）を選んで下部の「参加する」ボタンを押して下さい📢
                     %br
                     📢参加ボタンを押すと、楽曲のパート内にアイコンが表示されます📢
                     %br
