fix/customer-sex-show

--- a/app/views/public/customers/show.html.haml
+++ b/app/views/public/customers/show.html.haml
@@ -71,6 +71,10 @@
               %td
                 = @customer.birthday.strftime("%Y/%m/%d") unless @customer.birthday.nil?
             %tr
+              %th{scope:"row"} 性別
+              %td
+                = @customer.human_attribute_enum(:sex)
+            %tr
               %th{scope:"row"} パート
               %td
                 - @customer.parts.each do |part|
