--- a/app/views/admin/homes/top.html.haml
+++ b/app/views/admin/homes/top.html.haml
@@ -1,16 +1,3 @@
-%ul.list-style-none
-  - if admin_signed_in?
-    %li
-      %i.fa-solid.fa-right-from-bracket
-      = link_to "管理者ログアウト", destroy_admin_session_path, method: :delete, class: "btn btn-secondary"
-  - else
-    %li
-      %i.fa-solid.fa-right-to-bracket
-      = link_to "管理者ログイン", new_admin_session_path, class: "btn btn-primary"
 .container
-  .row.justify-content-center
-    .col-md-10
-      %h2.text-center
-        管理者ダッシュボード
-
-      = render "admin/customers/index", customers: @customers
+  = render 'layouts/admin_header_menu'
+  = render "admin/customers/index", customers: @customers
