--- a/app/assets/stylesheets/public/homes/top.scss
+++ b/app/assets/stylesheets/public/homes/top.scss
@@ -3,6 +3,7 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 .menu-top-btn{
   width: 100px;
+  font-size: 10px;
 }
 
 .customer-menu-top {
