--- a/app/assets/stylesheets/public/homes/top.scss
+++ b/app/assets/stylesheets/public/homes/top.scss
@@ -1,6 +1,10 @@
 // Place all the styles related to the public/homes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.top-list{
+  font-size: 10px;
+}
+
 .menu-top-btn{
   width: 100px;
   font-size: 10px;
