--- a/app/views/public/homes/top.html.haml
+++ b/app/views/public/homes/top.html.haml
@@ -1,26 +1,4 @@
-.header_container.sticky-top
-  .header-menu
-    .row
-      .col-6
-        .top-message
-          %h1 be My Style
-          %p あなたの「やりたい！」を叶える場所！」
-          %p 利用可能時間【6:00~26:00】
-      .col-6
-        %ul.list-style-none.header-sign-in-list
-          %li
-            %i.fa-solid.fa-user-plus
-            = link_to "新規登録", new_customer_registration_path, data: { 'turbolinks': false }, class: "btn btn-success menu-top-btn"
-          %li
-            %i.fa-solid.fa-right-to-bracket
-            = link_to "ログイン", new_customer_session_path, data: { 'turbolinks': false }, class: "btn btn-primary menu-top-btn"
-
-  .customer-menu-top
-    %ul.list-style-none
-      %li
-        = link_to "Topページ", public_homes_top_path, data: { 'turbolinks': false }, class: "btn btn-info menu-sp-btn"
-      %li
-        = link_to "BeMyStyleとは？", public_homes_about_path, data: { 'turbolinks': false }, class: "btn btn-info menu-sp-btn"
+= render 'layouts/header_menu'
 
 .top-container
   .slider
