--- a/app/views/public/homes/top.html.haml
+++ b/app/views/public/homes/top.html.haml
@@ -7,11 +7,13 @@
     = image_tag 'public-top3.jpg' ,class:"images"
     = image_tag 'public-top4.jpg' ,class:"images"
     = image_tag 'public-top5.jpg' ,class:"images"
-  .customer-menu-top
-    %ul.list-style-none
-      %li
-        %i.fa-solid.fa-user-plus
-        = link_to "新規登録", new_customer_registration_path, data: { 'turbolinks': false }, class: "btn btn-success menu-sp-btn"
-      %li
-        %i.fa-solid.fa-right-to-bracket
-        = link_to "ログイン", new_customer_session_path, data: { 'turbolinks': false }, class: "btn btn-primary menu-sp-btn"
+  
+  - unless customer_signed_in?
+    .customer-menu-top
+      %ul.list-style-none
+        %li
+          %i.fa-solid.fa-user-plus
+          = link_to "新規登録", new_customer_registration_path, data: { 'turbolinks': false }, class: "btn btn-success menu-sp-btn"
+        %li
+          %i.fa-solid.fa-right-to-bracket
+          = link_to "ログイン", new_customer_session_path, data: { 'turbolinks': false }, class: "btn btn-primary menu-sp-btn"
