--- a/app/assets/stylesheets/public/homes/top.scss
+++ b/app/assets/stylesheets/public/homes/top.scss
@@ -14,8 +14,8 @@
   display: block;
   width: 100%;
   height: 50px;
-  background-color: lightblue;
   margin: 0 auto;
+  border: 1px solid black;
   border-radius: 10px;
   ul{
     display: flex;
