--- a/app/assets/stylesheets/public/events.scss
+++ b/app/assets/stylesheets/public/events.scss
@@ -1,3 +1,7 @@
+.event-show{
+  width: 100%;
+}
+
 .event-index-head-title{
   text-align: center;
   padding: 5px;
@@ -226,22 +230,23 @@
       font-weight: bold;
       font-size: 15px;
       margin-bottom: 50px;
+      .part-name{
+        display: block;
+        text-align: center;
+        border: solid 1px black;
+        border-radius: 10px;
+        margin-right: 5px;
+        width: 130px;
+        height: 70px;
+        line-height: 60px;
+        padding: 5px;
+      }
       .member{
         display: flex;
         flex-wrap: wrap;
         margin-top: 5px;
         min-height: 70px;
         width: 90%;
-        .part-name{
-          text-align: center;
-          border: solid 1px black;
-          border-radius: 10px;
-          margin-right: 5px;
-          width: 130px;
-          height: 70px;
-          line-height: 60px;
-          padding: 5px;
-        }
       }
       .image-style{
         text-decoration: none;
@@ -343,9 +348,10 @@
     width: 90%;
     margin: 0 auto;
     .event-show-table{
+      width: 300px;
       #map {
-        height: 300px;
-        width: 300px;
+        height: 280px;
+        width: 280px;
       }
     }
     .event-index-title{
